--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         </div>
         <div class="col-md-9 content d-flex align-items-center vh-100 p-5">
           <div>
-            <h1 class="fw-bold h1-text">Hola!<br>Soy Mateo</h1>
-            <p>100% HTML5</p>
+            <h1 class="fw-bold h1-text">Hi!<br>I'm Mateo</h1>
+            <p>100% HTML5 and Bootstrap</p>
             <a href="https://github.com/M1000GG" target="_blank" rel="noopener noreferrer">
             <button class="btn btn-outline-primary text-uppercase">
               <span class="mb-0">
-                Download CV <i class="bi bi-download"></i>
+                Github profile <i class="bi bi-download"></i>
               </span>
             </button>
             </a>
