Button Icon replaced

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a href="https://github.com/M1000GG" target="_blank" rel="noopener noreferrer">
             <button class="btn btn-outline-primary text-uppercase">
               <span class="mb-0">
-                Github profile <i class="bi bi-download"></i>
+                Github profile <i class="bi bi-eye m-0 p-0 align-items-center"></i>
               </span>
             </button>
             </a>
